--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -86,6 +86,7 @@ main article {
   border: solid 5px black;
   padding: 10px;
   font-weight: normal;
+  margin-bottom: 50px;
 }
 
 article footer {
