--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,3 +13,10 @@
 .main-header h2 {
   font-weight: normal;
 }
+
+@media only screen and (min-width: 1024px) {
+ .main-header {
+   width: 33%;
+   margin-top: 125px;
+ } 
+}
