--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,8 +26,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-.container {
-  margin: 0 5% 0 5%;  
+.container {    
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -108,11 +107,15 @@ article header div {
   padding-right: 15px;
 }
 
-.tweet-container {
+.tweet-text-container {
   display: flex;
   border-bottom: solid 5px black;
   padding: 20px;
   font-weight: bold;
+}
+
+.content-container {
+  margin: 0 5% 0 5%;
 }
 
 article footer i {
@@ -125,5 +128,16 @@ article footer i {
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
+
+@media only screen and (min-width: 1024px) {
+  .content-container {
+    width: 50%;
+  }
+
+  .container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+ }
